Fix bus window label alignment: pin Route/Driver labels to window bottom

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -43,7 +43,7 @@ body {
   &__window-label {
     font-size: 1.5rem;
     font-weight: bold;
-    margin: 0;
+    margin: auto 0 0;
   }
 
   &__score {
